...
      child: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(8.0),
            child: CupertinoSearchTextField(
              controller: _searchController,
              placeholder: "Search followers...",
              onChanged: (_) {
                setState(() {
                  searchText = _searchController.text;
                });
              },
            ),
...
                    children: [
                      MediaQuery.of(context).platformBrightness ==
                              Brightness.dark
                          ? Image.asset('assets/darkMode/no_followers.png')
                          : Image.asset('assets/images/no_followers.png'),
                      const Center(
                        child: Text('No followers found'),
                      ),
                    ],
                  );
                }
                return ListView.builder(
                  itemCount: filteredUsers.length,
...
